--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -16,6 +16,7 @@
     bool opendoor = Model.OPENDOOR != null;
     bool wascan = Model.WASCAN != null;
     bool nosql = Model.NOSQL != null;
+    bool odat = Model.ODAT != null;
 }
 
 
@@ -2175,4 +2176,156 @@
                                 </div>
                             </form>
 } 
+
+    @* -----ODAT----- *@
+    if (odat)
+    {
+        <h2><em>Modifica modulo</em><strong> @(Model.ODAT.Nome)</strong></h2>
+        <hr />
+ <form asp-action="Edit" name="odatForm">
+                                <input type="hidden" asp-for="@Model.ODAT.Applicazione" value="@webmva.Models.APPLICAZIONE.ODAT" />
+                                <input type="hidden" asp-for="@Model.ODAT.ID" />
+                                <div class="row panel panel-default panel-body">
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.ODAT.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.ODAT.Nome)" />
+                                        </div>
+                                    </div>
+                                     <div class="col-sm-12">
+                                       <hr/>
+                                        <div class="col-sm-7" style="margin:0 auto; float:none">
+                                            <div class="form-group row">
+                                                <h4 asp-for="@(Model.ODAT.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                <input class="form-control" asp-for="@(Model.ODAT.ComandoPersonalizzato)" />
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-12">
+                                        <hr />
+                                        <h4>Seleziona i comandi</h4>
+                                        <hr />
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli la porta</label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="number" class="col-sm-5" asp-for="@Model.ODAT.PortaOdat" />
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli la verbosità</label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <select class="col-sm-5" asp-for="@Model.ODAT.VerboseOdat">
+                                                <option value="0">1</option>
+                                                <option value="1">2 </option>
+                                                <option value="2">3</option>
+                                            </select>
+                                        </div>
+                                         <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli SID</label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.ODAT.SID">
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Setta Utente</label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.ODAT.UtenteOdat">
+                                        </div>
+                                         <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli la Password</label>
+                                            </div>
+                                             <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.ODAT.PasswordOdat">
+                                        </div>
+                                       <br>
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-6">
+                                                <div class0"col-sm-12">
+                                        <div class="form-group row">
+                                                <div class="col-sm-6">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.ODAT.AllOdat" /> All (all)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-6">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.ODAT.Tnspoison" /> Tnspoison (tnspoison)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-6">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.ODAT.Tnscmd" /> Tnscmd (tnscmd)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            </div>
+                                            </div>
+                                        <div class="col-sm-6">
+                                            <div clas="col-sm-12">
+                                        <div class="form-group row">
+                                                <div class="col-sm-9">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.ODAT.PasswordStealer" /> Passwordstealer (passwordstealer)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-9">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.ODAT.PasswordGuesser" /> PasswordGuesser (passwordguesser)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-6">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.ODAT.SmbOdat" /> Smb (smb)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <div class="col-sm-6">
+                                                    <label class="control-label">
+                                                        <input type="checkbox" asp-for="@Model.ODAT.TestOdat" /> Test (--test-module)
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            </div>
+                                            </div>
+                                            </div>
+                                   <div class="col-sm-12">
+                                            <hr/>
+                                            <div class="col-sm-5">
+                                                <div clas="form-group row">
+                                                 <a href="https://github.com/quentinhardy/odat/wiki"target="_blank"><span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                        consulta il documentazione di ODAT </a>
+                                        </div>
+                                        </div>
+                                        <div class="col-sm-1"></div>
+                                        <div class="col-sm-6 text-right">
+                                            <div class="form-group row">
+                                                <input type="submit" asp-action="Edit" asp-route-id="@Model.ODAT.ID" class="btn btn-default" value="Salva" />&nbsp;&nbsp; |
+                                                <a asp-action="Index"> Torna alla lista</a>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                </div>
+                            </form>
+}
 }
