--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -9,7 +9,7 @@
             <form asp-action="Edit" name="modificaProgetto">
            <!-- <div asp-validation-summary="ModelOnly" class="text-danger"></div>--> 
             <input type="hidden" asp-for="@Model.ID" />
-             <div class="row panel panel-default panel-body">
+            <div class="row panel panel-default panel-body">
              <div class="col-sm-12">
              <br>
             <div class="col-sm-7" style="margin:0 auto; float:none">
@@ -17,7 +17,7 @@
                             <h4 asp-for="@Model.Nome">Nome Modulo  </h4><hr/>
                             <input class="form-control" asp-for="@Model.Nome" />
                         </div>
-                    </div>
+            </div>
                   <br>
                   <h4><strong>Scegli il modulo</strong></h4><hr/>
                  
@@ -29,7 +29,7 @@
                     </strong>
 
                 </a></div>
-                 <div class="col-5">
+                <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
 					<a data-toggle="collapse" href="#Nmap"><strong>NMAP</strong>
@@ -209,6 +209,7 @@
                       </div>
                       </div>
                       </div>
+                     
                      <div class="panel panel-default">
                     <div class="panel-heading">
                     <a href="#web" data-toggle="collapse">
@@ -728,7 +729,7 @@
                         </div>
                         </div>
                       </div>
-                      </div>
+                    </div>
                       <div class="panel panel-default">
                     <div class="panel-heading">
 				 <a href="#ig" data-toggle="collapse">
@@ -773,6 +774,7 @@
                                         </tr>
                                     </thead>
                                 </div>
+                                <tbody>
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -794,11 +796,11 @@
                                             </tr>       
                                     }
                                 </tbody>
-                            </table>
-
-                        </div>
-                        </div>
-                        </div>
+                                </table>
+                                </div>
+                                </div>
+                                </div>
+        
                         
                       
                         <div class="panel panel-sidebar">
@@ -855,7 +857,6 @@
                                     }
                                 </tbody>
                             </table>
-
                         </div>
                         </div>
                       </div>
@@ -998,7 +999,7 @@
                         </div>
                         </div>
                       </div>
-                         <div class="panel panel-sidebar">
+                <div class="panel panel-sidebar">
                     <div class="panel-heading">
                         <a   data-toggle="collapse" href="#nosql">
                             <strong>
@@ -1039,6 +1040,69 @@
                                        
                                         
                                             if(item.Applicazione!= webmva.Models.APPLICAZIONE.NOSQL){continue;}
+                                             <tr>
+                                                <td>
+                                                    <input type="checkbox"
+                                                        name="moduliSelezionati"
+                                                        value="@item.ModuloID"
+                                                        @(Html.Raw(item.Inserito ? "checked=\"checked\"" : "")) />
+                                                        
+                                                </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Nome)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Comando)
+                                                </td>
+                                            </tr>       
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                        </div>
+                      </div>
+                        <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a   data-toggle="collapse" href="#odat">
+                            <strong>
+                                ODAT
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse" id="odat">
+                     <div class="panel-body ">
+                      <div class="col-sm-7">
+                                        <div class="form-group">
+                                            <h4 asp-for="@Model.Target">IP</h4><hr/>
+                                            <input class="form-control" asp-for="@Model.Target" />
+                                        </div>
+                                    </div><br>
+                                    <div class="col-sm-12">
+                                     <h4>Seleziona i moduli ODAT</h4><hr/>
+                                    </div>
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th></th>
+                                             <th>
+                                        Nome
+                                            </th>
+                                            <th>
+                                        Comando
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    
+                                    @foreach (var item in listaModuli) {
+                                       
+                                        
+                                            if(item.Applicazione!= webmva.Models.APPLICAZIONE.ODAT){continue;}
                                              <tr>
                                                 <td>
                                                     <input type="checkbox"
@@ -1109,11 +1173,7 @@
                                     </thead>
                                 </div>
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
-                                        </td>
-                                    </tr>
+                                  
                                     @foreach (var item in listaModuli) {
                                        
                                         
@@ -1157,13 +1217,12 @@
                                             <a asp-action="Index"> Torna alla lista</a>
                                         </div>
                                     </div>
-          </div>
+                   </div>                 
+                </div>
                 </form>
-                
-                 
                  }
-                 </div>
-        </div>
+</div>
+        
           
 
 
